docs/v0.2.0a41/_sources/reference/_autosummary/hpcflow.sdk.app.App.rst.txt
hpcflow.sdk.app.App
===================

.. currentmodule:: hpcflow.sdk.app

.. autoclass:: App
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:
   
   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~App.get_info
      ~App.load_builtin_template_component_data
      ~App.load_config
      ~App.load_template_components
      ~App.reload_config
      ~App.reload_template_components
      ~App.template_components_from_json_like
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~App.API_logger
      ~App.CLI_logger
      ~App.command_files
      ~App.config
      ~App.config_logger
      ~App.envs
      ~App.is_config_loaded
      ~App.is_template_components_loaded
      ~App.log
      ~App.logger
      ~App.parameters
      ~App.run_time_info
      ~App.runtime_info_logger
      ~App.scripts
      ~App.task_schemas
      ~App.template_components
   
   